# reovim

./: Cargo.toml  README.md  test.txt  test2.txt  test_content.txt  test_navigation.txt  test_scroll.txt
src/: color.rs  event.rs  main.rs
src/event/: mod.rs
src/render/: element.rs  mod.rs  tree.rs
src/tui/: command.rs  debug.rs  editor.rs  gutter.rs  mod.rs  status.rs  terminal_buffer.rs  text.rs  tree.rs  window.rs
